# mediasorter

./: .gitignore  README.md  mediasorter.search.overrides.yml  pyproject.toml
src/mediasorter/: __init__.py  cli.py
src/mediasorter/lib/: cache.py  config.py  execute.py  metadata.py  models.py  overrides.py  parse.py  sort.py  utils.py
tests/: conftest.py  test_chown.py  test_commit.py  test_metadata.py  test_parser.py  test_sorter.py
