[tool.poetry]
name = "multimediasorter"
version = "2.0.3"
description = ""
authors = []
license = "MIT"
readme = "README.md"
packages = [
    { include = "mediasorter", from = "src" },
]

[tool.poetry.scripts]
mediasorter = "mediasorter.cli:main"

[tool.poetry.dependencies]
python = ">=3.10"
PyYAML = "^6.0"
pydantic = "^1.10.4"
aiohttp = "^3.8.3"
rich = "^13.1.0"
async-cache = "^1.1.1"
typer = "^0.12.3"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
mock = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
